--- a/Ascii/index.html
+++ b/Ascii/index.html
@@ -1,12 +1,27 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
     <title>Document</title>
 </head>
+
 <body>
-    <img src="Kjondall.jpg" id="kelsea-img" alt="Kjondall">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <a class="navbar-brand" href="#">Ascii Filter</a>
+    </nav>
+    <div class="container">
+            <h3>Select image: </h3>
+        <div class="row">
+            <div class="form-group">
+                <input class="form-control-file" type="file" id="file-upload">
+            </div>
+        </div>
+        <canvas id="canvas"></canvas>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.full.min.js"></script>
-    <script type="module" src="main.js" ></script>
+    <script type="module" src="main.js"></script>
 </body>
+
 </html>
